print user results

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,3 +50,9 @@ footer {
 #error, #error1, #error2, #error-u{
     color: red;
 }
+
+#listBtn{
+    text-align: right;
+    padding-right: 0px;
+    margin-top: 15px;
+}
