--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,24 @@
+body {
+    padding-top: 5rem;
+}
+
+
 .navbar {
     margin-bottom: 0;
     border-radius: 0;
+}
+
+.nav-link{
+    color: white !important;
+}
+
+.nav-link:focus,.nav-link:hover{
+    color:rgba(255,255,255,.75) !important;
+}
+
+.breadcrumb{
+    padding: 8px 15px;
+    background-color: #f5f5f5;
 }
 
 footer {
@@ -9,10 +27,8 @@ footer {
     padding: 15px;
 }
 
-.container{
-    margin-top: 10px;
-    float: none;
-
+label{
+    font-weight: 600;
 }
 
 #content {
@@ -36,7 +52,7 @@ footer {
 }
 
 .header-active{
-    color: #000;
+    color: #3A5FCD !important;
 }
 
 #nameT, #dateT{
@@ -54,5 +70,67 @@ footer {
 #listBtn{
     text-align: right;
     padding-right: 0px;
-    margin-top: 15px;
+}
+
+
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.form-signin {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+}
+.form-signin, .form-control:focus {
+    z-index: 2;
+}
+.form-signin, #inputEmail {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.form-signin, #inputPass{
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.row-signin {
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-align: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    text-align: center;
+    padding-top: 5em;
+}
+
+.form-old-select{
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s
+}
+
+.table thead th{
+    border-top: none;
 }
